--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-name: 编译N2N_IPV6
+name: Compiling mxre_n2n
 
 on:
   push:
@@ -22,114 +22,114 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - target: x86_64-linux-musl_AES
-            os: ubuntu-latest
-            URL: x86_64-linux-musl
-            OPENSSL_TARGET: linux-x86_64
 
-          # - target: apple-mac_AES
-          #   os: macos-latest
-          # - target: apple-mac
-          #   os: macos-latest
-
-          # - target: x86_64-pc-windows_AES
-          #   os: windows-latest
-          #   ARCH: x64
-          #   OPENSSL_TARGET: VC-WIN64A
-          #   MSVC_ARCH: x64
-          - target: x86_64-pc-windows
+#          - target: x86_64-linux-musl_AES
+#            os: ubuntu-latest
+#            URL: x86_64-linux-musl
+#            OPENSSL_TARGET: linux-x86_64
+#          - target: x86_64-linux-musl
+#            os: ubuntu-latest
+#            URL: x86_64-linux-musl
+#            OPENSSL_TARGET: linux-x86_64
+#
+          - target: x86_64-pc-windows_AES
             os: windows-latest
             ARCH: x64
             OPENSSL_TARGET: VC-WIN64A
             MSVC_ARCH: x64
-
-          # - target: i686-pc-windows_AES
-          #   os: windows-latest
-          #   ARCH: x86
-          #   OPENSSL_TARGET: VC-WIN32
-          #   MSVC_ARCH: x86
-          # - target: i686-pc-windows
-          #   os: windows-latest
-          #   ARCH: x86
-          #   OPENSSL_TARGET: VC-WIN32
-          #   MSVC_ARCH: x86
-
-          # - target: aarch64-linux-musl_AES
-          #   os: ubuntu-latest
-          #   URL: aarch64-linux-musl
-          #   OPENSSL_TARGET: linux-aarch64
-          # - target: aarch64-linux-musl
-          #   os: ubuntu-latest
-          #   URL: aarch64-linux-musl
-          #   OPENSSL_TARGET: linux-aarch64
-
-          - target: x86_64-linux-musl
-            os: ubuntu-latest
-            URL: x86_64-linux-musl
-            OPENSSL_TARGET: linux-x86_64
-
-          # - target: i686-linux-musl_AES
-          #   os: ubuntu-latest
-          #   URL: i686-linux-musl
-          #   OPENSSL_TARGET: linux-generic32
-          # - target: i686-linux-musl
-          #   os: ubuntu-latest
-          #   URL: i686-linux-musl
-          #   OPENSSL_TARGET: linux-generic32
-
-          # - target: armv7-linux-musleabihf_AES
-          #   os: ubuntu-latest
-          #   URL: armv7l-linux-musleabihf
-          #   OPENSSL_TARGET: linux-armv4
-          # - target: armv7-linux-musleabihf
-          #   os: ubuntu-latest
-          #   URL: armv7l-linux-musleabihf
-          #   OPENSSL_TARGET: linux-armv4
-
-          # - target: armv7-linux-musleabi_AES
-          #   os: ubuntu-latest
-          #   URL: armv7m-linux-musleabi
-          #   OPENSSL_TARGET: linux-armv4
-          # - target: armv7-linux-musleabi
-          #   os: ubuntu-latest
-          #   URL: armv7m-linux-musleabi
-          #   OPENSSL_TARGET: linux-armv4
-
-          - target: arm-linux-musleabihf_AES
-            os: ubuntu-latest
-            URL: arm-linux-musleabihf
-            OPENSSL_TARGET: linux-armv4
-          - target: arm-linux-musleabihf
-            os: ubuntu-latest
-            URL: arm-linux-musleabihf
-            OPENSSL_TARGET: linux-armv4
-
-          - target: arm-linux-musleabi_AES
-            os: ubuntu-latest
-            URL: arm-linux-musleabi
-            OPENSSL_TARGET: linux-armv4
-          - target: arm-linux-musleabi
-            os: ubuntu-latest
-            URL: arm-linux-musleabi
-            OPENSSL_TARGET: linux-armv4
-
-          - target: mipsel-linux-musl_AES
-            os: ubuntu-latest
-            URL: mipsel-linux-muslsf
-            OPENSSL_TARGET: linux-mips32
-          - target: mipsel-linux-musl
-            os: ubuntu-latest
-            URL: mipsel-linux-muslsf
-            OPENSSL_TARGET: linux-mips32
-
-          - target: mips-linux-musl_AES
-            os: ubuntu-latest
-            URL: mips-linux-muslsf
-            OPENSSL_TARGET: linux-mips32
-          - target: mips-linux-musl
-            os: ubuntu-latest
-            URL: mips-linux-muslsf
-            OPENSSL_TARGET: linux-mips32
+#          - target: x86_64-pc-windows
+#            os: windows-latest
+#            ARCH: x64
+#            OPENSSL_TARGET: VC-WIN64A
+#            MSVC_ARCH: x64
+#
+          - target: i686-pc-windows_AES
+            os: windows-latest
+            ARCH: x86
+            OPENSSL_TARGET: VC-WIN32
+            MSVC_ARCH: x86
+#          - target: i686-pc-windows
+#            os: windows-latest
+#            ARCH: x86
+#            OPENSSL_TARGET: VC-WIN32
+#            MSVC_ARCH: x86
+#
+#          - target: i686-linux-musl_AES
+#            os: ubuntu-latest
+#            URL: i686-linux-musl
+#            OPENSSL_TARGET: linux-generic32
+#          - target: i686-linux-musl
+#            os: ubuntu-latest
+#            URL: i686-linux-musl
+#            OPENSSL_TARGET: linux-generic32
+#
+#          - target: mipsel-linux-musl_AES
+#            os: ubuntu-latest
+#            URL: mipsel-linux-muslsf
+#            OPENSSL_TARGET: linux-mips32
+#          - target: mipsel-linux-musl
+#            os: ubuntu-latest
+#            URL: mipsel-linux-muslsf
+#            OPENSSL_TARGET: linux-mips32
+#
+#          - target: mips-linux-musl_AES
+#            os: ubuntu-latest
+#            URL: mips-linux-muslsf
+#            OPENSSL_TARGET: linux-mips32
+#          - target: mips-linux-musl
+#            os: ubuntu-latest
+#            URL: mips-linux-muslsf
+#            OPENSSL_TARGET: linux-mips32
+#
+#          - target: arm-linux-musleabihf_AES
+#            os: ubuntu-latest
+#            URL: arm-linux-musleabihf
+#            OPENSSL_TARGET: linux-armv4
+#          - target: arm-linux-musleabihf
+#            os: ubuntu-latest
+#            URL: arm-linux-musleabihf
+#            OPENSSL_TARGET: linux-armv4
+#
+#          - target: arm-linux-musleabi_AES
+#            os: ubuntu-latest
+#            URL: arm-linux-musleabi
+#            OPENSSL_TARGET: linux-armv4
+#          - target: arm-linux-musleabi
+#            os: ubuntu-latest
+#            URL: arm-linux-musleabi
+#            OPENSSL_TARGET: linux-armv4
+#
+#          - target: aarch64-linux-musl_AES
+#            os: ubuntu-latest
+#            URL: aarch64-linux-musl
+#            OPENSSL_TARGET: linux-aarch64
+#          - target: aarch64-linux-musl
+#            os: ubuntu-latest
+#            URL: aarch64-linux-musl
+#            OPENSSL_TARGET: linux-aarch64
+#
+#          - target: armv7-linux-musleabihf_AES
+#            os: ubuntu-latest
+#            URL: armv7l-linux-musleabihf
+#            OPENSSL_TARGET: linux-armv4
+#          - target: armv7-linux-musleabihf
+#            os: ubuntu-latest
+#            URL: armv7l-linux-musleabihf
+#            OPENSSL_TARGET: linux-armv4
+#
+#          - target: armv7-linux-musleabi_AES
+#            os: ubuntu-latest
+#            URL: armv7m-linux-musleabi
+#            OPENSSL_TARGET: linux-armv4
+#          - target: armv7-linux-musleabi
+#            os: ubuntu-latest
+#            URL: armv7m-linux-musleabi
+#            OPENSSL_TARGET: linux-armv4
+#
+#          - target: apple-mac_AES
+#            os: macos-latest
+#          - target: apple-mac
+#            os: macos-latest
 
     runs-on: ${{ matrix.os }}
     env:
@@ -142,31 +142,31 @@ jobs:
         with:
           submodules: recursive
 
-      - name: 设置 MSVC 环境
+      - name: Setting up the MSVC environment
         if: runner.os == 'windows'
         uses: ilammy/msvc-dev-cmd@v1
         with:
           arch: ${{ matrix.MSVC_ARCH }}
 
-      - name: 安装 Perl
+      - name: Install Perl
         if: runner.os == 'windows'
         uses: shogo82148/actions-setup-perl@v1
         with:
           perl-version: '5.38'
 
-      - name: 安装 NASM
+      - name: Install NASM
         if: runner.os == 'windows'
         run: |
           choco install nasm -y
           echo "C:\Program Files\NASM" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
-      - name: 设置缓存 key
+      - name: Set cache key
         if: endsWith(matrix.TARGET, '_AES')
         id: cache-key
         run: |
           echo "CACHE_KEY=openssl-${{ matrix.TARGET }}-cache" >> $GITHUB_OUTPUT
 
-      - name: 恢复 OpenSSL 缓存
+      - name: Restore OpenSSL cache
         if: endsWith(matrix.TARGET, '_AES')
         id: cache-openssl
         uses: actions/cache@v4
@@ -176,33 +176,33 @@ jobs:
           restore-keys: |
             openssl-${{ matrix.TARGET }}-
 
-      - name: macOS 构建
+      - name: macOS build
         if: runner.os == 'macOS'
         run: |
           set -euo pipefail
-          echo "构建 macOS universal2：x86_64 + arm64"
+          echo "Building macOS universal2: x86_64 + arm64"
           if [[ "${TARGET}" == *_AES ]]; then
             if [ -d "${OPENSSL_PREFIX}" ]; then
-              echo "已存在 ${OPENSSL_PREFIX}，跳过 OpenSSL 编译"
+              echo "${OPENSSL_PREFIX} already exists, skip OpenSSL compilation"
             else
               git clone --depth 1 --branch OpenSSL_1_1_1-stable https://github.com/openssl/openssl openssl-src
               cd openssl-src
               COMMON_CONF="no-shared no-zlib"
-              echo "==== 开始构建 x86_64 ===="
+              echo "==== Start building x86_64 ===="
               export CC="clang -arch x86_64"
               export CFLAGS="-O2 -arch x86_64 -mmacosx-version-min=10.13"
               ./Configure darwin64-x86_64-cc ${COMMON_CONF} --prefix=${OPENSSL_PREFIX}/x86_64
               make -j$(sysctl -n hw.ncpu)
               make install_sw
               make clean
-              echo "==== 开始构建 arm64 ===="
+              echo "==== Start building arm64 ===="
               export CC="clang -arch arm64"
               export CFLAGS="-O2 -arch arm64 -mmacosx-version-min=11.0"
               ./Configure darwin64-arm64-cc ${COMMON_CONF} --prefix=${OPENSSL_PREFIX}/arm64
               make -j$(sysctl -n hw.ncpu)
               make install_sw
               make clean
-              echo "==== 合并 ===="
+              echo "==== merge ===="
               mkdir -p ${OPENSSL_PREFIX}/lib
               mkdir -p ${OPENSSL_PREFIX}/include
               lipo -create ${OPENSSL_PREFIX}/x86_64/lib/libcrypto.a ${OPENSSL_PREFIX}/arm64/lib/libcrypto.a -output ${OPENSSL_PREFIX}/lib/libcrypto.a
@@ -211,7 +211,7 @@ jobs:
               cd ..
             fi
           fi
-          # AES 开关
+          # AES switch
           if [[ "${TARGET}" == *_AES ]]; then
             AES_FLAGS="-DN2N_OPTION_AES=ON -DUSE_OPENSSL=1 -DOPENSSL_INCLUDE_DIR=${OPENSSL_PREFIX}/include -DOPENSSL_CRYPTO_LIBRARY=${OPENSSL_PREFIX}/lib/libcrypto.a"
           else
@@ -228,7 +228,7 @@ jobs:
           ./edge -h || true
           ./supernode -h || true
 
-      - name: 下载gcc
+      - name: Download gcc
         if: runner.os == 'Linux'
         uses: lmq8267/dl-musl@main
         with:
@@ -236,7 +236,7 @@ jobs:
          static: true
          gccpath: /opt/musl_gcc
 
-      - name: 编译 Windows OpenSSL
+      - name: Compiling Windows OpenSSL
         if: steps.cache-openssl.outputs.cache-hit != 'true' && runner.os == 'windows' && endsWith(matrix.TARGET, '_AES')
         shell: cmd
         run: |
@@ -250,7 +250,7 @@ jobs:
 
           cd ..
 
-      - name: Windows 构建（AES）
+      - name: Windows Build (AES)
         if: runner.os == 'windows' && endsWith(matrix.TARGET, '_AES')
         shell: pwsh
         run: |
@@ -272,7 +272,7 @@ jobs:
           .\edge.exe -h || true
           .\supernode.exe -h || true
 
-      - name: Windows 构建
+      - name: Windows build
         if: runner.os == 'windows' && !endsWith(matrix.TARGET, '_AES')
         shell: pwsh
         run: |
@@ -291,14 +291,14 @@ jobs:
           .\edge.exe -h || true
           .\supernode.exe -h || true
 
-      - name: 安装 UPX
+      - name: Install UPX
         if: runner.os == 'Linux' && !contains(matrix.TARGET, 'windows') && !contains(matrix.TARGET, 'apple-darwin')
         uses: crazy-max/ghaction-upx@v3
         with:
           version: v4.2.4
           install-only: true
 
-      - name: Linux构建
+      - name: Linux build
         if: runner.os == 'Linux' && !contains(matrix.TARGET, 'windows') && !contains(matrix.TARGET, 'apple-darwin')
         run: |
           sudo timedatectl set-timezone "Asia/Shanghai"
@@ -327,19 +327,19 @@ jobs:
           ./edge -h || true
           ./supernode -h || true
 
-          #查看当前目录文件
+          # View current directory files
           ls -la
-          #查看edge二进制文件信息
+          # View Edge binary file information
           file edge
-          #剥离
+          # peel off
           $STRIP edge
           $STRIP supernode
           file edge
-          #压缩
+          # compression
           upx --lzma --best edge || true
           upx --lzma --best supernode || true
 
-      - name : 上传
+      - name : upload
         uses: actions/upload-artifact@master
         if: always()
         with:
@@ -348,14 +348,14 @@ jobs:
            build/edge${{ runner.os == 'Windows' && '.exe' || '' }}
            build/supernode${{ runner.os == 'Windows' && '.exe' || '' }}
 
-      - name: 保存 OpenSSL 缓存
+      - name: Save OpenSSL cache
         if: steps.cache-openssl.outputs.cache-hit != 'true' && endsWith(matrix.TARGET, '_AES')
         uses: actions/cache/save@v4
         with:
           path: ${{ env.OPENSSL_PREFIX }}
           key: ${{ steps.cache-key.outputs.CACHE_KEY }}
 
-      - name: 删除工作流
+      - name: Delete workflow
         uses: GitRML/delete-workflow-runs@main
         with:
          token: ${{ secrets.GITHUB_TOKEN }}
