--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -49,6 +49,15 @@ jobs:
             OPENSSL_TARGET: VC-WIN32
             MSVC_ARCH: x86
 
+          - target: aarch64-linux-musl_AES
+            os: ubuntu-latest
+            URL: aarch64-linux-musl
+            OPENSSL_TARGET: linux-aarch64
+          - target: aarch64-linux-musl
+            os: ubuntu-latest
+            URL: aarch64-linux-musl
+            OPENSSL_TARGET: linux-aarch64
+
           - target: x86_64-linux-musl_AES
             os: ubuntu-latest
             URL: x86_64-linux-musl
@@ -58,14 +67,32 @@ jobs:
             URL: x86_64-linux-musl
             OPENSSL_TARGET: linux-x86_64
 
-          - target: aarch64-linux-musl_AES
+          - target: i686-linux-musl_AES
             os: ubuntu-latest
-            URL: aarch64-linux-musl
-            OPENSSL_TARGET: linux-aarch64
-          - target: aarch64-linux-musl
+            URL: i686-linux-musl
+            OPENSSL_TARGET: linux-generic32
+          - target: i686-linux-musl
             os: ubuntu-latest
-            URL: aarch64-linux-musl
-            OPENSSL_TARGET: linux-aarch64
+            URL: i686-linux-musl
+            OPENSSL_TARGET: linux-generic32
+
+          - target: armv7-linux-musleabihf_AES
+            os: ubuntu-latest
+            URL: armv7l-linux-musleabihf
+            OPENSSL_TARGET: linux-armv4
+          - target: armv7-linux-musleabihf
+            os: ubuntu-latest
+            URL: armv7l-linux-musleabihf
+            OPENSSL_TARGET: linux-armv4
+
+          - target: armv7-linux-musleabi_AES
+            os: ubuntu-latest
+            URL: armv7m-linux-musleabi
+            OPENSSL_TARGET: linux-armv4
+          - target: armv7-linux-musleabi
+            os: ubuntu-latest
+            URL: armv7m-linux-musleabi
+            OPENSSL_TARGET: linux-armv4
 
           - target: arm-linux-musleabihf_AES
             os: ubuntu-latest
@@ -302,7 +329,12 @@ jobs:
 
           mkdir -p build
           cd build
-          cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_FLAGS="-O2 -ffunction-sections -fdata-sections -fno-strict-aliasing -I${OPENSSL_PREFIX}/include" -DCMAKE_EXE_LINKER_FLAGS="-static -Wl,--gc-sections -static-libgcc -L${OPENSSL_PREFIX}/lib" -DCMAKE_C_COMPILER=${CC} ${AES_FLAGS}
+          cmake .. \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_C_FLAGS="-O2 -ffunction-sections -fdata-sections -fno-strict-aliasing -I${OPENSSL_PREFIX}/include" \
+            -DCMAKE_EXE_LINKER_FLAGS="-static -Wl,--gc-sections -static-libgcc -L${OPENSSL_PREFIX}/lib" \
+            -DCMAKE_C_COMPILER=${CC} \
+            ${AES_FLAGS}
           make -j$(nproc)
           ./edge -h || true
           ./supernode -h || true
